# event-elo-cards

./: .gitignore  CLAUDE.md  Esports Trading Card Economy Design.md  ban_player.py  clear_guild_commands.py  pyproject.toml
migrations/: 001_market_logs.sql  002_kpi_snapshots.sql  003_trades.sql  004_archived_cards.sql  005_wishlists.sql  006_coin_trades.sql  007_facing_misprint.sql  008_coin_trades_offer_type.sql  009_close_stale_auctions.sql
src/: config.py  database.py  main.py
src/cogs/: auction.py  economy.py  inventory.py  market.py  stats.py  trade.py  wishlist.py
src/utils/: autocomplete.py  card_generator.py  economy_utils.py
